# simet-ma

./: .gitignore  .gitmodules  COPYING  Makefile  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  configure  configure.ac  schedule_574.sh  task_authentication.sh  task_discovery.sh  task_report.sh  version  version.sh
cmake-projects/: .gitignore  Makefile.am  README  jsonpath_changes.patch  jsonpath_lemon_changes.patch  libubox_changes.patch
cmake-projects/jsonpath/: .gitignore  CMakeLists.txt  ast.c  ast.h  lexer.c  lexer.h  main.c  matcher.c  matcher.h  parser.y
cmake-projects/jsonpath/contrib/: lemon.c
cmake-projects/jsonpath/libubox/: .gitignore  CMakeLists.txt  avl.c  base64.c  blob.c  blob.h  blobmsg.h  blobmsg_json.c  jshn.c  udebug-remote.c  udebug.c  uloop-epoll.c  uloop.c  uloop.h  usock.c  utils.h
cmake-projects/jsonpath/libubox/.github/workflows/: ci.yml
cmake-projects/jsonpath/libubox/debian/: control  copyright  generate-changelog.sh  libubox-dev.install  libubox-utils.install  libubox.install  rules
cmake-projects/jsonpath/libubox/examples/: CMakeLists.txt
cmake-projects/jsonpath/libubox/lua/: CMakeLists.txt
cmake-projects/jsonpath/libubox/scripts/: devel-build.sh
cmake-projects/jsonpath/libubox/sh/: jshn.sh
debian/: .gitignore  br.nic.simet.simet-ma-reports.desktop  changelog  control  copyright  rules  simet-lmapd.init  simet-ma.config  simet-ma.cron.daily  simet-ma.cron.weekly  simet-ma.if-up  simet-ma.init  simet-ma.install  simet-ma.lintian-overrides  simet-ma.postinst  simet-ma.postrm  simet-ma.ppp.ip-up  simet-ma.templates
doc/: REFERENCES.md
docker/: Dockerfile  Dockerfile.reference-container  README.txt  policy-rc.d  rsyslog.conf  simet-ma.foreground.sh
docs/: README.build.txt  SIMET-overview.txt  developer-notes.txt  firmware_vendor_release_notes.txt  task_exit_status.h  task_module_api.txt
inetup-client-c/: .gitignore  AUTHORS  COPYING  Makefile.am  autogen.sh  configure.ac
inetup-client-c/src/: Makefile.am  logger.h  netinet-tcp-compat.h  simet-inetuptime.c  simet-inetuptime.h  sys-linux.c  sys-linux.h  tcpaq.c  tcpaq.h
lmap-tasks/: .gitrepo  Dockerfile  Makefile  README.md  discovery.response  report.template  schedule_574.conf  schedule_574.sh  task_authentication.sh  task_discovery.sh  task_report.sh
mock/: task_tcp
simet-agent-lmap-tasks/: .gitrepo
simet-api/: .gitignore  API.md  Makefile  Makefile.am  README  simet-ma_periodic.sh.in  simet_create_vlabel.simet.sh.in  simet_create_vlabel.simetbox.sh.in  simet_geolocation.sh.in  simet_issuebanner-generator.sh.in  simet_lib.simet.sh.in  simet_lib.simetbox.sh.in  simet_lib_config.sh.in  simet_lib_lmapd.sh.in  simet_lmap-create-report.sh.in  simet_lmap-fetch-schedule.sh.in  simet_lmap-send-report.sh.in  simet_lmap-stdout-wrapper.sh.in  simet_pairing_info.sh.in  simet_qrcode.sh.in  simet_read_vlabel.sh.in  simet_read_vlabel.simet.sh.in  simet_read_vlabel.simetbox.sh.in  simet_register_ma-hooks.sh.in.mec  simet_register_ma.sh  simet_register_ma.sh.in  simet_register_vlabel.sh.in  simet_report-queue-flush.sh.in  simet_spoofer.sh.in  simet_spoofer_v2.sh.in  simet_view_results.sh.in  simetbox_lmap-fetch-schedule.sh.in  simetbox_register_ma.sh  simetbox_register_ma.sh.in
simet-api/conf/: lmap-default-schedule.json  lmap-default-schedule.simet.json  lmap-default-schedule.simetbox.json  lmap-emergency-schedule.json  lmap-empty-schedule.json  lmap-sched-template.simet.json  lmap-sched-template.simetbox.json  simet-ma.conf  simet-ma.conf.in
simet-api/config.d/: simet-ma_base-config.json.in  simetbox_base-config.json.in
simet-api/examples/: vendor.get_platform_simet_label  vendor.get_platform_simet_secret
simet-api/lmap-tasks/: internetnl_connection_test.sh.in  lmap-traceroute-wrapper.sh.in  lmap-wrapper.sh.in  simet2-agent-info.sh.in  simet_fping-to-ixbr.sh.in  simetbox_fping-to-gateway.sh.in
simet-api/registry.d/: simet-ma_base-registry.json.in  simet.nic.br_subsystem-id.tag-registry.json  simetbox_base-registry.json.in
simet-api/utils/: .gitignore  ChangeLog  NEWS  README  configure.ac
simet-api/utils/src/: Makefile.am  base64.c  base64.h  base64_test.c  crc16.c  crc16.h  sha256.c  sha256.h  simet_gen_vlabel.c  simet_hash.c
simet-common/: Makefile  README
simet-dnsaddr-c/: .gitignore  configure.ac
simet-dnsaddr-c/src/: Makefile.am  base64.c  logger.h  report.c  report.h  simet_dnsaddr.c  simet_random.c  simet_random.h  timespec.h
simet-runner/: .gitignore  Dockerfile  Makefile.am  autogen.sh  configure.ac  version.sh
simet-runner/src/: defines.sh  defines.sh.in  log.sh  lsb_agentinfo.sh  main.sh  simetbox_agentinfo.sh  subtask_msmtparams.sh  subtask_serversel.sh  task_authentication.sh  task_authorization.sh  task_discover.sh  task_environment.sh  task_geolocation.sh  task_report.sh  task_traceroute.sh  templates.sh  util.sh
simet-runner/src/template/: report.template  task.template
simet-runner/test/: agent-id.lab  agent-id.prod  agent.jwt.lab  agent.jwt.prod  services-example.json  services.mock.json  simet-ma.conf  simet_agent_unix.conf
sspoofer-client-c/: .gitignore  AUTHORS  COPYING  TODO.txt  autogen.sh  configure.ac
sspoofer-client-c/src/: Makefile.am  base64.c  base64_test.c  misc.c  msmtpkt.c  netinet-tcp-compat.h  report.c  report.h  retry.h  simet_err.h  sspooferc.c  sspooferc.h  sys-linux.c  sys-linux.h  tcpaq.c  tcpaq.h  timespec.h
task-runner/: .gitignore  Makefile  Makefile.am
tcp-client-c/: .gitignore  .gitrepo  Makefile  Makefile.am  Makefile.in  README  TCP_Raw_V1.json  configure  configure.ac  libubox  stamp-h1  tcpc_config.h  tcpc_config.h.in  version
tcp-src/: logger.h  tcpc.c
tcpbw-client-c/: .gitignore  AUTHORS  ChangeLog  (+4 more)
tcpbw-client-c/src/: Makefile.am  logger.h  report.c  report.h  simet_err.h  tcpbwc-tcp.c  tcpbwc.c  tcpbwc.h  tcpinfo.h  timespec.h
tcpbw-client-c/src/libubox/: usock.c
twamp-client-c/src/: Makefile.am  base64.c  base64.h  base64_test.c  logger.h  message.c  message.h  report.c  report.h  timestamp.c  timestamp.h  twamp.c  twamp.h  twampc.c
twamp-client-c/src/libubox/: usock.c
(+51 files in other folders)
